# BOSS-TONE-STUDIO-for-Linux

./: .gitignore  Dockerfile  Dockerfile.develop  Dockerfile.prepare  README.md  develop.sh
html-patches/: html-katana-gen-3.patch
tauri/: package-lock.json  package.json
tauri/src-tauri/: .gitignore  Cargo.toml  tauri.conf.json
tauri/src-tauri/src/: lib.rs  main.rs
